--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 
                 <div class="add-form" id="add">
                       
-                       <form action="/addItem" method="post" class="form1" >
+                       <form class="form1">
                        <a  href="#" class="form1__close-icon icon-plus"></a>
                        <label class="form1__labels">title</label>
                         <input type="text" class="form1__input--title" placeholder="task title" >
