--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/icon-font.css">
     <title>Time Block</title>
+    <script data-ad-client="ca-pub-1919291264027639" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
